# Miyori

./: .gitignore  AGENTS.md  ARCHITECTURE.md  FEATURE_Agentic_Loop_Tool.md  FEATURE_Fact_Management.md  FEATURE_TextInput.md  FEATURE_tool_calling.md  Miyori.bat  README.md  TODO_Server_implementation_cleanup.md  config.json.example  main.py  prompting.txt  pyproject.toml  requirements.txt  start.sh  system_instructions.txt
skills/How_to_be_an_Agent/: SKILL.md
skills/Tooling_Terminal/: SKILL.md
skills/Working_with_Files/: SKILL.md
src/: main.py
src/core/: ASSISTANT_PLAN.md  assistant.py  miyori.py
src/implementations/llm/: LLM_BACKEND_PLAN.md  google_ai_backend.py
src/implementations/speech/: SPEECH_INPUT_PLAN.md  google_speech_input.py  horrible_speech_input.py  porcupine_cobra_vosk.py  porcupine_speech_input.py
src/implementations/tts/: TTS_OUTPUT_PLAN.md  (+2 more)
src/interfaces/: llm_backend.py  memory.py  speech_input.py
src/memory/: ARCH_memory.md  async_memory_stream.py  consolidation.py  context.py  deep_layers.py  episodic.py  gates.py  memory_retriever.py  sqlite_store.py  summarizer.py
src/miyori/: main.py
src/tools/: web_search.py
src/utils/: config.py  embeddings.py  logger.py  memory_logger.py  run_consolidation.py
tests/: inspect_memory.py  test_confidence_merge.py  test_core_llm.py  test_integrated_tools.py  test_llm.py  test_llm_memory.py  test_memory_logging.py  test_read_modify_write.py  test_semantic_searches.py  test_server.py  test_speech.py  test_tool_calling.py  test_tts.py  tts_test_text.json  verify_consolidation.py
(+31 files in other folders)
